# makepad-components

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  bindgen.js  bindgen.js.br  justfile  makepad-gallery.data.bin.br  makepad-gallery.secondary.wasm  makepad-gallery.secondary.wasm.br  makepad-gallery.wasm  makepad-gallery.wasm.br  makepad.splash  notes.md  splash_app.md  task_plan.md  test.js
.agents/: CLAUDE.md  README.md  metadata.json
.agents/.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  preview.yml  wasm-pages.yml
.jules/: bolt.md  palette.md
.omx/context/: component-efficiency-thin-gallery-20260401T164300Z.md  generic-components-gallery-thin-wrapper-20260401T162235Z.md
.omx/plans/: autopilot-impl.md  autopilot-spec.md  baseline-component-efficiency-20260401.md  prd-component-efficiency-thin-gallery.md  prd-generic-components-gallery-thin-wrapper.md  ralplan-component-efficiency-thin-gallery.md  test-spec-component-efficiency-thin-gallery.md  test-spec-generic-components-gallery-thin-wrapper.md
components/: Cargo.toml
components/src/: accordion.rs  alert.rs  alert_dialog.rs  avatar.rs  badge.rs  breadcrumb.rs  button.rs  button_group.rs  card.rs  carousel.rs  checkbox.rs  collapsible.rs  dialog.rs  drawer.rs  dropdown_menu.rs  empty.rs  field.rs  hover_card.rs  hr.rs  input.rs  lib.rs  overlay_base.rs  panel.rs  popup.rs  progress.rs  scroll.rs  select.rs  sheet.rs  sidebar.rs  skeleton.rs  slider.rs  sonner.rs  spinner.rs  tabs.rs  theme.rs  tooltip.rs
docs/: responsive.md
docs/plans/: 2026-03-05-shad-accordion-design.md  (+3 more)
gallery/: Cargo.toml
gallery/src/: app.rs  lib.rs  main.rs
gallery/src/ui/: accordion_page.rs  alert_dialog_page.rs  alert_page.rs  aspect_ratio_page.rs  avatar_page.rs  badge_page.rs  breadcrumb_page.rs  button_group_page.rs  button_page.rs  card_page.rs  carousel_page.rs  checkbox_page.rs  collapsible_page.rs  content_flip.rs  dialog_page.rs  drawer_page.rs  dropdown_menu_page.rs  hover_card_page.rs  input_page.rs  kbd_page.rs  label_page.rs  mod.rs  progress_page.rs  radio_group_page.rs  resizable_page.rs  root.rs  scroll_area_page.rs  select_page.rs  separator_page.rs  sheet_page.rs  sidebar.rs  sidebar_page.rs  skeleton_page.rs  slider_page.rs  snippets.rs  sonner_page.rs  spinner_page.rs  switch_page.rs  tabs_page.rs  themed_widgets.rs  (+1 more)
makepad-components/: Cargo.toml
makepad-gallery/: Cargo.toml  build.rs  route-bundles.toml
makepad-gallery/resources/snippets/: accordion_page.txt  alert_page.txt  aspect_ratio_page.txt  avatar_page.txt  badge_page.txt  breadcrumb_page.txt  button_group_page.txt  button_page.txt  calendar_page.txt  card_page.txt  carousel_page.txt  chart_page.txt  checkbox_page.txt  collapsible_page.txt  command_palette_page.txt  context_menu_page.txt  date_picker_page.txt  dialog_page.txt  icon_gallery_page.txt  input_otp_page.txt  input_page.txt  kbd_page.txt  label_page.txt  menubar_page.txt  navigation_menu_page.txt  pagination_page.txt  popover_page.txt  progress_page.txt  radio_group_page.txt  resizable_page.txt  scroll_area_page.txt  select_page.txt  separator_page.txt  sheet_page.txt  sidebar_page.txt  skeleton_page.txt  slider_page.txt  sonner_page.txt  spinner_page.txt  switch_page.txt  (+4 more)
makepad-gallery/src/: main.rs
makepad-gallery/src/ui/: accordion_page.rs  alert_page.rs  aspect_ratio_page.rs  avatar_page.rs  badge_page.rs  breadcrumb_page.rs  bundled_page_host.rs  button_group_page.rs  button_page.rs  calendar_page.rs  card_page.rs  carousel_page.rs  catalog.rs  catalog_page.rs  chart_page.rs  checkbox_page.rs  collapsible_page.rs  command_palette.rs  command_palette_page.rs  content_flip.rs  context_menu_page.rs  date_picker_page.rs  dialog_page.rs  icon_gallery_page.rs  input_otp_page.rs  input_page.rs  kbd_page.rs  label_page.rs  menubar_page.rs  mod.rs  navigation_menu_page.rs  overview_page.rs  page_macros.rs  pagination_page.rs  popover_page.rs  progress_page.rs  radio_group_page.rs  registry.rs  resizable_page.rs  responsive.rs  (+18 more)
makepad-gallery/src/ui/snippets/: components.rs  data.rs  feedback.rs  forms.rs  getting_started.rs  layout.rs  mod.rs  navigation.rs  overlays.rs
makepad-gallery/tests/: gallery.rs  gallery.splash  icon_gallery_source_guards.rs  overlay_hotspots.rs  shortcut_layout_hotspots.rs  sonner.rs  table.rs  theme_reload_source_guards.rs  ui.rs  ui_visible.rs  ui_visible.splash
makepad-gallery/tests/common/: mod.rs
makepad-icon/: Cargo.toml  build.rs
makepad_platform/: audio_worklet.js  audio_worklet.js.br  auto_reload.js.br  web.js  web.js.br  web_gl.js  web_gl.js.br  web_gpu.js.br  web_runtime.js.br  web_worker.js  web_worker.js.br
makepad_router/: .gitignore  Cargo.toml  README.md
makepad_router/crates/makepad-router-core/: Cargo.toml
makepad_router/crates/makepad-router-core/src/: pattern.rs  registry.rs  route.rs  router.rs  url.rs
makepad_router/crates/makepad-router-core/tests/: url_regression.rs
makepad_router/crates/makepad-router-widgets/: Cargo.toml
makepad_router/crates/makepad-router-widgets/src/: widget.rs
makepad_router/crates/makepad-router-widgets/src/widget/: api.rs  browser_sync.rs  callbacks.rs  commands.rs  engine.rs  fields.rs  guard_flow.rs  live_apply.rs  nested.rs  path_nav.rs  persistence.rs  route_defs.rs  route_render.rs  route_widgets.rs  transitions.rs  url_state.rs
makepad_router/examples/router_advanced_example/: Cargo.toml  route-bundles.toml
makepad_router/examples/router_advanced_example/src/app/: mod.rs
makepad_router/examples/router_example/: Cargo.toml
makepad_router/examples/router_example/src/app/: mod.rs
makepad_wasm_bridge/: wasm_bridge.js  wasm_bridge.js.br
scripts/: build_wasm.sh
(+1841 files in other folders)
