# [PROJECT_DIR]/Cargo.toml
[workspace]
members = ["gallery", "components", "makepad-icon"]
resolver = "3"

[profile.small]
inherits = "release"
opt-level = 'z'   # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
strip = true
