# [PROJECT_DIR]/Cargo.toml
[workspace]
members = ["gallery", "components", "makepad-icon"]
resolver = "3"

[workspace.dependencies]
makepad-widgets = { git = "https://github.com/wheregmis/makepad.git", branch = "remove_debug_title", version = "2.0.0" }
makepad-code-editor = { git = "https://github.com/wheregmis/makepad.git", branch = "remove_debug_title", version = "2.0.0" }
makepad-components = { path = "components", version = "1.0.0" }
makepad-icon = { path = "makepad-icon", version = "1.0.0" }

[profile.small]
inherits = "release"
opt-level = 'z'      # Optimize for size
lto = true           # Enable link-time optimization
codegen-units = 1    # Reduce number of codegen units to increase optimizations
panic = 'abort'      # Abort on panic
strip = true
