# [PROJECT_DIR]/Cargo.toml
[workspace]
members = [
    "makepad-gallery",
    "makepad-components",
    "makepad-components/examples/date_picker_table_example",
    "makepad-icon",
    "makepad_router",
    "makepad_router/crates/makepad-router-core",
    "makepad_router/crates/makepad-router-widgets",
    "makepad_router/examples/router_example",
    "makepad_router/examples/router_advanced_example",
]
resolver = "3"

[workspace.dependencies]
makepad-live-id = { git = "https://github.com/makepad/makepad.git", branch = "dev", version = "1.0.0" }
makepad-micro-serde = { git = "https://github.com/makepad/makepad.git", branch = "dev", version = "1.0.0" }
makepad-draw = { git = "https://github.com/makepad/makepad.git", branch = "dev", version = "2.0.0" }
makepad-widgets = { git = "https://github.com/makepad/makepad.git", branch = "dev", version = "2.0.0" }
makepad-code-editor = { git = "https://github.com/makepad/makepad.git", branch = "dev", version = "2.0.0" }
makepad-components = { path = "makepad-components", version = "1.0.0" }
makepad-icon = { path = "makepad-icon", version = "1.0.0" }
makepad-router = { path = "makepad_router", version = "1.0.0" }
makepad-router-core = { path = "makepad_router/crates/makepad-router-core", version = "1.0.0" }
makepad-router-widgets = { path = "makepad_router/crates/makepad-router-widgets", version = "1.0.0" }

[profile.small]
inherits = "release"
#debug = true
opt-level = 'z'   # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
strip = true

[profile.release.package.makepad-voice]
codegen-units = 1
