[package]
name = "makepad-gallery"
version = "1.0.0"
edition = "2021"
description = "Makepad component gallery example"
license = "MIT OR Apache-2.0"

[package.metadata.makepad.web]
preserve = ["makepad_icon:resources/icons"]

[dependencies]
makepad-widgets = { workspace = true }
makepad-code-editor = { workspace = true }
makepad-components = { workspace = true }
makepad-router = { workspace = true }
